cleanup that should fix a bug happening on iOS 6

--- a/client/stylesheets/layout/body.css
+++ b/client/stylesheets/layout/body.css
@@ -11,24 +11,9 @@ body {
 }
 
 #container {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  overflow-y: scroll;
   max-width: 500px;
   margin: auto;
-  overflow-x: hidden;
-  overflow-y: hidden;
-}
-
-#content-container {
-  padding-bottom: 20px;
-  height: 100%;
-  overflow-y: scroll; /* has to be scroll, not auto */
   -webkit-overflow-scrolling: touch;
-  overflow-x: hidden;
 }
 
 p {
